与github的API网络通畅，可正常查询到数据

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,9 +9,15 @@
     tools:context=".module.main.MainActivity"
     tools:showIn="@layout/app_bar_main"
     >
-  <TextView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="Hello World!"
-      />
+  <android.support.v4.widget.SwipeRefreshLayout
+      android:id="@+id/refreshLayout"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      >
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hello World!"
+        />
+  </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
