1、替换使用okhttp提供的log，原因为retrofit中的okhttp版本太高，导致log不能使用 2、增加翻页加载 3、增加点击跳转网页

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -20,4 +20,8 @@
         android:layout_height="match_parent"
         />
   </android.support.v4.widget.SwipeRefreshLayout>
-</RelativeLayout>
+  <include
+      layout="@layout/content_loading"
+      android:id="@+id/main_loading"
+      />
+</FrameLayout>
