1、增加各种常用语言切换搜索（全语言暂不支持） 2、增加保存上次搜索的语言处理，下次打开展示上次搜索的语言

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -2,11 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
   <group android:checkableBehavior="single">
     <item
+        android:id="@+id/nav_all"
+        android:title="@string/language_all"/>
+    <item
         android:id="@+id/nav_java"
         android:title="@string/language_java"/>
     <item
         android:id="@+id/nav_oc"
         android:title="@string/language_oc"/>
+    <item
+        android:id="@+id/nav_swift"
+        android:title="@string/language_swift"/>
     <item
         android:id="@+id/nav_c"
         android:title="@string/language_c"/>
