--- a/app/src/main/res/layout/item_search_result.xml
+++ b/app/src/main/res/layout/item_search_result.xml
@@ -24,9 +24,10 @@
     android:layout_marginTop="@dimen/spacing_tiny"
     app:cardElevation="@dimen/spacing_tiny"
     >
-  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
+      android:background="?android:selectableItemBackground"
       android:orientation="vertical"
       >
     <TextView
@@ -37,28 +38,62 @@
         android:padding="@dimen/padding_normal"
         android:singleLine="true"
         android:text="project name"
+        android:textColor="@color/primary_dark"
         android:textSize="@dimen/font_large"
         />
     <TextView
         android:id="@+id/tv_project_desc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/tv_project_name"
         android:ellipsize="end"
         android:maxLines="2"
-        android:padding="@dimen/padding_normal"
+        android:paddingBottom="@dimen/padding_normal"
+        android:paddingLeft="@dimen/padding_large"
+        android:paddingRight="@dimen/padding_large"
+        android:paddingTop="@dimen/padding_normal"
         android:text="project description"
+        android:textColor="@color/black"
         android:textSize="@dimen/font_normal"
         />
-    <TextView
-        android:id="@+id/tv_author"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/padding_small"
-        android:paddingLeft="@dimen/padding_normal"
-        android:paddingRight="@dimen/padding_normal"
-        android:paddingTop="@dimen/padding_small"
-        android:text="author"
-        android:textSize="@dimen/font_normal"
-        />
-  </LinearLayout>
+        android:layout_below="@id/tv_project_desc"
+        android:orientation="horizontal"
+        android:padding="@dimen/padding_normal"
+        >
+      <ImageView
+          android:id="@+id/img_author_photo"
+          android:layout_width="20dp"
+          android:layout_height="20dp"
+          android:layout_gravity="center_vertical"
+          android:src="@mipmap/ic_launcher"
+          />
+      <TextView
+          android:id="@+id/tv_author"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_gravity="center_vertical"
+          android:paddingBottom="@dimen/padding_small"
+          android:paddingLeft="@dimen/padding_normal"
+          android:paddingRight="@dimen/padding_normal"
+          android:paddingTop="@dimen/padding_small"
+          android:text="author"
+          android:textSize="@dimen/font_normal"
+          />
+      <TextView
+          android:id="@+id/tv_stars"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_gravity="center_vertical"
+          android:paddingBottom="@dimen/padding_small"
+          android:paddingLeft="@dimen/padding_normal"
+          android:paddingRight="@dimen/padding_normal"
+          android:paddingTop="@dimen/padding_small"
+          android:text="@string/stars"
+          android:textSize="@dimen/font_normal"
+          />
+    </LinearLayout>
+  </RelativeLayout>
 </android.support.v7.widget.CardView>
