1、增加根据关键字搜索 2、修改BaseRecyclerAdapter库的引入方式

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".module.main.MainActivity"
     tools:showIn="@layout/app_bar_main"
@@ -14,11 +15,30 @@
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       >
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        />
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:orientation="vertical"
+        >
+      <EditText
+          android:id="@+id/et_search"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_margin="@dimen/spacing_normal"
+          android:background="@drawable/bg_border_corners5_light_blue"
+          android:hint="@string/hint_input_keyword"
+          android:imeOptions="actionSearch"
+          android:inputType="text"
+          android:singleLine="true"
+          />
+      <android.support.v7.widget.RecyclerView
+          android:id="@+id/recycler"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          />
+    </LinearLayout>
   </android.support.v4.widget.SwipeRefreshLayout>
   <include
       layout="@layout/content_loading"
