--- a/app/src/main/res/layout/item_no_data.xml
+++ b/app/src/main/res/layout/item_no_data.xml
@@ -13,26 +13,10 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/layout_loading"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    >
-  <ProgressBar
-      android:id="@+id/progress"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_centerInParent="true"
-      style="?android:attr/progressBarStyleSmall"
-      />
-  <TextView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_below="@id/progress"
-      android:layout_centerHorizontal="true"
-      android:text="@string/loading"
-      android:textColor="#000"
-      />
-</RelativeLayout>
+    android:gravity="center"
+    android:text="@string/no_data"
+    android:textSize="@dimen/font_larger"
+    />
