--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+  <color name="colorPrimary">@color/primary</color>
+  <color name="colorPrimaryDark">@color/primary_dark</color>
+  <color name="colorAccent">@color/accent</color>
   <color name="white">#FFFFFF</color>
   <color name="black">#000000</color>
+  <color name="red">#FF0000</color>
   <color name="gray">#888888</color>
   <color name="transparent">#00000000</color>
 
