优化角标文字CornerMarkText

--- a/app/src/main/res/layout/item_search_result.xml
+++ b/app/src/main/res/layout/item_search_result.xml
@@ -36,6 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         app:bg_color="@color/colorPrimary"
+        app:max_size="50dp"
         app:text="java"
         app:text_color="@color/white"
         app:text_size="10sp"
