--- a/app/src/main/res/layout/activity_collect.xml
+++ b/app/src/main/res/layout/activity_collect.xml
@@ -1,14 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_collect"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.ouyangzn.github.module.collect.CollectActivity"
+    android:orientation="vertical"
+    tools:context=".module.collect.CollectActivity"
     >
-</RelativeLayout>
+  <android.support.v4.widget.SwipeRefreshLayout
+      android:id="@+id/refreshLayout"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:orientation="vertical"
+        >
+      <com.ouyangzn.github.view.InputEdit
+          android:id="@+id/view_search"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginBottom="@dimen/spacing_tiny"
+          android:layout_marginLeft="@dimen/spacing_normal"
+          android:layout_marginRight="@dimen/spacing_normal"
+          android:layout_marginTop="@dimen/spacing_tiny"
+          app:input_hint="@string/hint_input_keyword"
+          app:input_imeOptions="actionSearch"
+          />
+      <android.support.v7.widget.RecyclerView
+          android:id="@+id/recycler_collect"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          />
+    </LinearLayout>
+  </android.support.v4.widget.SwipeRefreshLayout>
+  <include
+      layout="@layout/content_loading"
+      android:id="@+id/layout_loading"
+      />
+</FrameLayout>
