1、收藏、取消收藏实现； 2、增加英文版语言； 3、修改原LocalRepo对象对CollectedRepo

--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -14,8 +14,12 @@
   ~ limitations under the License.
   -->
 <resources>
-  <array name="long_click_project_dialog_item">
+  <array name="long_click_main_dialog_item">
     <item>复制网址</item>
     <item>收藏</item>
+  </array>
+  <array name="long_click_collect_dialog_item">
+    <item>复制网址</item>
+    <item>取消收藏</item>
   </array>
 </resources>
