--- a/app/src/main/res/values/view_style.xml
+++ b/app/src/main/res/values/view_style.xml
@@ -15,4 +15,26 @@
   -->
 <resources>
   <integer name="duration_dialog_anim">300</integer>
+
+  <style name="TabIndicator" parent="Widget.Design.TabLayout">
+    <!--tab的最大的宽度-->
+    <!--<item name="tabMaxWidth">@dimen/design_tab_max_width</item>-->
+    <!--tab指示标的颜色-->
+    <item name="tabIndicatorColor">@color/white</item>
+    <!--tab 指示标的高度-->
+    <item name="tabIndicatorHeight">2dp</item>
+    <!--tab字体的样式-->
+    <item name="tabTextAppearance">@style/TabTextStyle</item>
+    <!--tab 选中时的颜色-->
+    <item name="tabSelectedTextColor">@color/white</item>
+  </style>
+
+  <style name="TabTextStyle" parent="TextAppearance.Design.Tab">
+    <!--Tab字体的大小-->
+    <item name="android:textSize">@dimen/font_normal</item>
+    <!--Tab字体的默认的颜色-->
+    <item name="android:textColor">@color/gray</item>
+    <!--Tab字体是否为大写-->
+    <item name="textAllCaps">false</item>
+  </style>
 </resources>
