--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -18,7 +18,16 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
+        app:layout_scrollFlags="scroll|enterAlwaysCollapsed|snap"
         app:popupTheme="@style/AppTheme.PopupOverlay"
+        />
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tabs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_scrollFlags="scroll|enterAlwaysCollapsed|snap"
+        app:tabMode="scrollable"
+        style="@style/TabIndicator"
         />
   </android.support.design.widget.AppBarLayout>
   <include layout="@layout/content_main"/>
