--- a/app/src/main/res/layout/fragment_base_content.xml
+++ b/app/src/main/res/layout/fragment_base_content.xml
@@ -13,22 +13,15 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<android.support.v4.view.ViewPager
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/view_pager_main"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".module.main.MainActivity"
-    tools:showIn="@layout/app_bar_main"
+    android:orientation="vertical"
     >
-  <!--<android.support.v4.view.PagerTabStrip
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_gravity="top"
-      android:background="@color/white"
-      android:textColor="@color/accent"
-      />-->
-</android.support.v4.view.ViewPager>
+  <ViewStub
+      android:id="@+id/stub_loading"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout="@layout/content_loading"
+      />
+</FrameLayout>
