--- a/app/src/main/res/layout/content_error.xml
+++ b/app/src/main/res/layout/content_error.xml
@@ -13,21 +13,18 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout_loading_failure"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:background="@color/white"
     >
-  <ViewStub
-      android:id="@+id/stub_loading"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:layout="@layout/content_loading"
+  <TextView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_centerInParent="true"
+      android:text="@string/loading_failure"
+      android:textColor="#000"
       />
-  <ViewStub
-      android:id="@+id/stub_error"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:layout="@layout/content_error"
-      />
-</FrameLayout>
+</RelativeLayout>
