--- a/app/src/main/res/values-en-rUS/string.xml
+++ b/app/src/main/res/values-en-rUS/string.xml
@@ -19,6 +19,7 @@
   <string name="navigation_drawer_open">Open navigation drawer</string>
   <string name="navigation_drawer_close">Close navigation drawer</string>
   <string name="action_settings">Settings</string>
+  <string name="nav_about">about</string>
   <string name="language_all">all</string>
   <string name="language_java">java</string>
   <string name="language_oc">Object-C</string>
@@ -32,6 +33,7 @@
   <string name="language_c_sharp">c#</string>
   <string name="language_shell">shell</string>
   <string name="loading">loading…</string>
+  <string name="loading_failure">Load failure/(ㄒoㄒ)/~~</string>
   <string name="stars">%d·stars</string>
   <string name="hint_input_keyword">search</string>
   <string name="error_search_github">search failure, retry please</string>
@@ -41,4 +43,5 @@
   <string name="tip_collect_cancel_success">cancel collect success</string>
   <string name="error_collect_failure">operate failure, retry please</string>
   <string name="error_collect_cancel_failure">operate failure, retry please</string>
+  <string name="error_main_load_failure">Load failure/(ㄒoㄒ)/~~\n click to refresh</string>
 </resources>
