--- a/app/src/main/res/layout/view_input_edit.xml
+++ b/app/src/main/res/layout/view_input_edit.xml
@@ -13,7 +13,7 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     >
@@ -31,9 +31,8 @@
       android:id="@+id/img_delete_input"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_alignParentRight="true"
-      android:layout_centerVertical="true"
+      android:layout_gravity="center_vertical|right"
       android:layout_marginRight="@dimen/spacing_tiny"
       android:src="@drawable/ic_input_delete"
       />
-</RelativeLayout>
+</merge>
