优化输入框InputEdit代码,增加一些EditText基础常用的的自定义属性

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -30,11 +30,12 @@
     <com.ouyangzn.github.view.InputEdit
         android:id="@+id/view_search"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginBottom="@dimen/spacing_tiny"
         android:layout_marginLeft="@dimen/spacing_normal"
         android:layout_marginRight="@dimen/spacing_normal"
         android:layout_marginTop="@dimen/spacing_tiny"
+        app:editBg="@drawable/bg_border_corners5_light_blue"
         app:input_hint="@string/hint_input_keyword"
         app:input_imeOptions="actionSearch"
         />
