--- a/app/src/main/res/layout/view_input_edit.xml
+++ b/app/src/main/res/layout/view_input_edit.xml
@@ -15,17 +15,15 @@
   -->
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     >
   <EditText
       android:id="@+id/et_input"
       android:layout_width="match_parent"
-      android:layout_height="44dp"
-      android:background="@drawable/bg_border_corners5_light_blue"
+      android:layout_height="match_parent"
       android:gravity="center_vertical"
       android:inputType="text"
       android:paddingRight="40dp"
-      android:singleLine="true"
       />
   <ImageView
       android:id="@+id/img_delete_input"
@@ -34,5 +32,6 @@
       android:layout_gravity="center_vertical|right"
       android:layout_marginRight="@dimen/spacing_tiny"
       android:src="@drawable/ic_input_delete"
+      android:visibility="gone"
       />
 </merge>
