--- a/app/src/main/res/drawable/selector_collect.xml
+++ b/app/src/main/res/drawable/selector_collect.xml
@@ -14,6 +14,6 @@
   ~ limitations under the License.
   -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-  <item android:drawable="@drawable/icon_collect_press" android:state_pressed="true"/>
-  <item android:drawable="@drawable/icon_collect"/>
+  <item android:drawable="@drawable/ic_collect_press" android:state_pressed="true"/>
+  <item android:drawable="@drawable/ic_collect"/>
 </selector>
