--- a/app/src/main/res/values-en-rUS/string.xml
+++ b/app/src/main/res/values-en-rUS/string.xml
@@ -19,9 +19,14 @@
   <string name="navigation_drawer_open">Open navigation drawer</string>
   <string name="navigation_drawer_close">Close navigation drawer</string>
   <string name="action_settings">Settings</string>
-  <string name="nav_about">about</string>
-  <string name="language_all">all</string>
-  <string name="language_java">java</string>
+  <string name="username_github">GitHub Username</string>
+  <string name="confirm">Confirm</string>
+  <string name="cancel">Cancel</string>
+  <string name="nav_about">About</string>
+  <string name="nav_username">username</string>
+  <string name="nav_my_stars">my stars</string>
+  <string name="language_all">All</string>
+  <string name="language_java">Java</string>
   <string name="language_oc">Object-C</string>
   <string name="language_swift">swift</string>
   <string name="language_c">C</string>
@@ -44,4 +49,5 @@
   <string name="error_collect_failure">operate failure, retry please</string>
   <string name="error_collect_cancel_failure">operate failure, retry please</string>
   <string name="error_main_load_failure">Load failure/(ㄒoㄒ)/~~\n click to refresh</string>
+  <string name="error_username_null">Username can\'t be null</string>
 </resources>
