--- a/app/src/main/res/values/view_style.xml
+++ b/app/src/main/res/values/view_style.xml
@@ -42,4 +42,12 @@
     <item name="android:textColor">#fff</item>
     <item name="android:textSize">18sp</item>
   </style>
+  <!-- 中等大小的按钮 -->
+  <style name="style_btn_middle_corners5_red" parent="@style/Widget.AppCompat.Button.Borderless">
+    <item name="android:layout_width">125dp</item>
+    <item name="android:layout_height">40dp</item>
+    <item name="android:background">@drawable/bg_border_corners5_light_blue</item>
+    <item name="android:textSize">@dimen/font_normal</item>
+    <item name="android:textColor">@color/color_btn_text</item>
+  </style>
 </resources>
