--- a/app/src/main/res/layout/fragment_stars.xml
+++ b/app/src/main/res/layout/fragment_stars.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (c) 2016.  ouyangzn   <email : ouyangzn@163.com>
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -12,16 +13,40 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v4.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/refresh_stars"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ouyangzn.github.module.stars.StarsFragment"
     >
-  <!-- TODO: Update blank fragment layout -->
-  <TextView
+  <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:text="@string/hello_blank_fragment"
-      />
-</FrameLayout>
+      android:focusable="true"
+      android:focusableInTouchMode="true"
+      android:orientation="vertical"
+      >
+    <com.ouyangzn.github.view.InputEdit
+        android:id="@+id/view_search_stars"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginBottom="@dimen/spacing_tiny"
+        android:layout_marginLeft="@dimen/spacing_normal"
+        android:layout_marginRight="@dimen/spacing_normal"
+        android:layout_marginTop="@dimen/spacing_tiny"
+        android:visibility="gone"
+        app:deleteImg="@drawable/ic_input_delete"
+        app:editBg="@drawable/bg_border_corners5_light_blue_white"
+        app:inputType="text"
+        app:input_hint="@string/hint_input_keyword"
+        app:input_imeOptions="actionSearch"
+        app:singleLine="true"
+        />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_stars"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+  </LinearLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
