--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,5 +22,7 @@
   <dimen name="padding_large">8dp</dimen>
   <dimen name="padding_normal">4dp</dimen>
   <dimen name="padding_small">2dp</dimen>
+
   <dimen name="divider_height">1px</dimen>
+  <dimen name="toolbar_height">49dp</dimen>
 </resources>
