--- a/app/src/main/res/values-en-rUS/string.xml
+++ b/app/src/main/res/values-en-rUS/string.xml
@@ -16,7 +16,7 @@
 <resources>
   <string name="app_name">open source</string>
   <string name="title_collect">Collected</string>
-  <string name="title_stars">My stars</string>
+  <string name="title_stars">Stars</string>
   <string name="navigation_drawer_open">Open navigation drawer</string>
   <string name="navigation_drawer_close">Close navigation drawer</string>
   <string name="action_settings">Settings</string>
