--- a/app/src/main/res/drawable/bg_border_corners5_light_blue.xml
+++ b/app/src/main/res/drawable/bg_border_corners5_light_blue.xml
@@ -16,16 +16,16 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
   <item android:state_pressed="true">
     <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-      <stroke android:color="@color/primary_dark" android:width="1px"/>
-      <solid android:color="@color/primary_dark"/>
+      <stroke android:color="@color/primary" android:width="1px"/>
+      <solid android:color="@color/primary"/>
       <corners android:radius="5dip"/>
       <padding android:bottom="10dp" android:left="10dp" android:right="10dp" android:top="10dp"/>
     </shape>
   </item>
   <item android:state_focused="true">
     <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-      <stroke android:color="@color/primary_dark" android:width="1px"/>
-      <solid android:color="@color/primary_dark"/>
+      <stroke android:color="@color/primary" android:width="1px"/>
+      <solid android:color="@color/primary"/>
       <corners android:radius="5dip"/>
       <padding android:bottom="10dp" android:left="10dp" android:right="10dp" android:top="10dp"/>
     </shape>
