--- a/app/src/main/res/drawable/bg_border_corners5_light_blue_white.xml
+++ b/app/src/main/res/drawable/bg_border_corners5_light_blue_white.xml
@@ -16,7 +16,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
   <item android:state_pressed="true">
     <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-      <stroke android:color="@color/primary_dark" android:width="1px"/>
+      <stroke android:color="@color/primary" android:width="1px"/>
       <solid android:color="@color/white"/>
       <corners android:radius="5dip"/>
       <padding android:bottom="10dp" android:left="10dp" android:right="10dp" android:top="10dp"/>
@@ -24,7 +24,7 @@
   </item>
   <item android:state_focused="true">
     <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-      <stroke android:color="@color/primary_dark" android:width="1px"/>
+      <stroke android:color="@color/primary" android:width="1px"/>
       <solid android:color="@color/white"/>
       <corners android:radius="5dip"/>
       <padding android:bottom="10dp" android:left="10dp" android:right="10dp" android:top="10dp"/>
