--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
   <group android:checkableBehavior="none">
     <item
-        android:id="@+id/nav_username"
+        android:id="@+id/nav_account"
         android:title="@string/nav_username"/>
     <item
         android:id="@+id/nav_my_stars"
