1、修改登录后的页面显示； 2、添加关于页面； 3、添加EventBus

--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -15,15 +15,15 @@
       android:id="@+id/img_photo"
       android:layout_width="60dp"
       android:layout_height="60dp"
-      android:src="@drawable/ic_photo"
+      android:src="@drawable/ic_default_photo"
       />
   <TextView
       android:id="@+id/tv_email"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:paddingTop="@dimen/padding_normal"
-      android:paddingBottom="@dimen/padding_normal"
       android:gravity="center_vertical"
+      android:paddingBottom="@dimen/padding_normal"
+      android:paddingTop="@dimen/padding_normal"
       android:text="ouyangzhaoneng@gmail.com"
       />
 </LinearLayout>
