1、修改跳转收藏功能到侧滑菜单； 2、首页toolbar右边按钮改为搜索，增加搜索页(暂未完成)

--- a/app/src/main/res/layout/fragment_collections.xml
+++ b/app/src/main/res/layout/fragment_collections.xml
@@ -24,7 +24,7 @@
         app:inputType="text"
         app:input_hint="@string/hint_input_keyword"
         app:input_imeOptions="actionSearch"
-        app:singleLine="false"
+        app:singleLine="true"
         />
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_collections"
