--- a/app/src/main/res/drawable/bg_border_corners5_light_blue.xml
+++ b/app/src/main/res/drawable/bg_border_corners5_light_blue.xml
@@ -14,8 +14,16 @@
   ~ limitations under the License.
   -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+  <item android:state_enabled="false">
+    <shape>
+      <stroke android:color="@color/gray_light" android:width="1px"/>
+      <solid android:color="@color/gray_light"/>
+      <corners android:radius="5dip"/>
+      <padding android:bottom="10dp" android:left="10dp" android:right="10dp" android:top="10dp"/>
+    </shape>
+  </item>
   <item android:state_pressed="true">
-    <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+    <shape>
       <stroke android:color="@color/primary" android:width="1px"/>
       <solid android:color="@color/primary"/>
       <corners android:radius="5dip"/>
@@ -23,7 +31,7 @@
     </shape>
   </item>
   <item android:state_focused="true">
-    <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+    <shape>
       <stroke android:color="@color/primary" android:width="1px"/>
       <solid android:color="@color/primary"/>
       <corners android:radius="5dip"/>
@@ -31,7 +39,7 @@
     </shape>
   </item>
   <item>
-    <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+    <shape>
       <stroke android:color="@color/primary_light" android:width="1px"/>
       <solid android:color="@color/primary_light"/>
       <corners android:radius="5dip"/>
