--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,8 @@
   <color name="white">#FFFFFF</color>
   <color name="black">#000000</color>
   <color name="red">#FF0000</color>
-  <color name="gray">#888888</color>
+  <color name="gray">#999999</color>
+  <color name="gray_light">#dddddd</color>
   <color name="transparent">#00000000</color>
 
 </resources>
