1、搜索页面完成； 2、调整部分代码结构

--- a/app/src/main/res/values-en-rUS/array.xml
+++ b/app/src/main/res/values-en-rUS/array.xml
@@ -40,4 +40,8 @@
     <item>Copy Url</item>
     <item>Collect</item>
   </array>
+  <array name="long_click_search_dialog_item">
+    <item>Copy Url</item>
+    <item>Collect</item>
+  </array>
 </resources>
