--- a/app/src/main/res/drawable/bg_bottom_line_light_blue.xml
+++ b/app/src/main/res/drawable/bg_bottom_line_light_blue.xml
@@ -21,7 +21,7 @@
           <solid android:color="@color/primary"/>
         </shape>
       </item>
-      <item android:bottom="@dimen/divider_height">
+      <item android:bottom="@dimen/height_divider">
         <shape android:shape="rectangle">
           <solid android:color="@color/white"/>
         </shape>
@@ -35,7 +35,7 @@
           <solid android:color="@color/primary_light"/>
         </shape>
       </item>
-      <item android:bottom="@dimen/divider_height">
+      <item android:bottom="@dimen/height_divider">
         <shape android:shape="rectangle">
           <solid android:color="@color/white"/>
         </shape>
