--- a/app/src/main/res/layout/fragment_base_content.xml
+++ b/app/src/main/res/layout/fragment_base_content.xml
@@ -38,7 +38,7 @@
   <android.support.v7.widget.Toolbar
       android:id="@+id/toolbar"
       android:layout_width="match_parent"
-      android:layout_height="@dimen/toolbar_height"
+      android:layout_height="@dimen/height_toolbar"
       android:background="?attr/colorPrimary"
       />
 </FrameLayout>
