--- a/app/src/main/res/drawable/bg_border_corners2_light_blue_white.xml
+++ b/app/src/main/res/drawable/bg_border_corners2_light_blue_white.xml
@@ -26,7 +26,7 @@
     <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
       <stroke android:color="@color/primary" android:width="1px"/>
       <solid android:color="@color/white"/>
-      <corners android:radius="5dip"/>
+      <corners android:radius="2dp"/>
       <padding android:bottom="10dp" android:left="10dp" android:right="10dp" android:top="10dp"/>
     </shape>
   </item>
@@ -34,7 +34,7 @@
     <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
       <stroke android:color="@color/primary" android:width="1px"/>
       <solid android:color="@color/white"/>
-      <corners android:radius="5dip"/>
+      <corners android:radius="2dp"/>
       <padding android:bottom="10dp" android:left="10dp" android:right="10dp" android:top="10dp"/>
     </shape>
   </item>
@@ -42,7 +42,7 @@
     <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
       <stroke android:color="@color/primary_light" android:width="1px"/>
       <solid android:color="@color/white"/>
-      <corners android:radius="5dip"/>
+      <corners android:radius="2dp"/>
       <padding android:bottom="10dp" android:left="10dp" android:right="10dp" android:top="10dp"/>
     </shape>
   </item>
